samples/_failures_safe/1761256293_b1a59e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1c91b5a7.c: In function ‘main’:
./samples/SAFE/__tmp_1c91b5a7.c:170:25: error: missing terminating " character
  170 |         fprintf(stderr, "Invalid
      |                         ^~~~~~~~
./samples/SAFE/__tmp_1c91b5a7.c:170:9: error: expected expression at end of input
  170 |         fprintf(stderr, "Invalid
      |         ^~~~~~~
./samples/SAFE/__tmp_1c91b5a7.c:170:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1c91b5a7.c:170:9: error: expected declaration or statement at end of input
